JumpScript/tests/baselines/reference/unusedVariablesinForLoop2.errors.txt
tests/cases/compiler/unusedVariablesinForLoop2.jump(2,16): error TS6133: 'elem' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinForLoop2.jump (1 errors) ====
    function f1 () {
        for (const elem in ["a", "b", "c"]) {
                   ~~~~
!!! error TS6133: 'elem' is declared but its value is never read.
    
        }
    }